// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputCounter should render 1`] = `
<DocumentFragment>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 vKSQU"
  >
    <div
      class="relative flex flex-1"
    >
      <input
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputCounter__input"
        maxlength="10"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span
          class="font-semibold text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="InputCounter__counter"
        >
          0/10
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputCounter should render with invalid state 1`] = `
<div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 hryStd"
  >
    <div
      class="relative flex flex-1"
    >
      <input
        aria-invalid="true"
        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
        data-testid="InputCounter__input"
        maxlength="10"
        name="vendorField"
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
    >
      <span
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <span
          class="font-semibold text-sm"
          data-testid="InputCounter__counter"
        >
          0
          /
          10
        </span>
      </div>
    </div>
  </div>
</div>
`;
